<resources>
    <string name="app_name">Fanfun</string>
    <string name="login_tittle">Ingresa con tu cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="register">Regístrate</string>
    <string name="login_bottom_text">Más informacion </string>
    <string name="login_bottom_link"> funfun.cl</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="terms_conditions">Términos y condiciónes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit_profile_picture">Editar foto de perfil</string>
    <string name="your_account">Tu cuenta</string>
    <string name="success_message_tittle">¡Video enviado con éxito!</string>
    <string name="error_message_title">¡Oops!</string>
    <string name="error_message_subtitle">Lo sentimos, el video no pudo ser enviado, inténtalo nuevamente.</string>
    <string name="error_message_body">Tu video ha sido guardado en borradores</string>
    <string name="success_button">Entendido</string>
    <string name="record_video">Grabar video</string>
    <string name="edit_video">Editar video</string>
    <string name="delete_button">Eliminar</string>
    <string name="save_button">Guardar</string>
    <string name="home_tittle">Tus fanfun</string>
    <string name="login_input_error">Correo o contraseña incorrectos</string>
    <string name="send_video">Enviar video</string>
    <string name="sending_video">Enviando</string>
    <string name="save_alert">El video se guardara en borradores</string>
    <string name="save_alert_tittle">Guardar</string>
    <string name="delete_alert">¿ Desea eliminar este video ?</string>
    <string name="send_alert">Al enviar este video se eliminaran los demas borradores para esta solicitud.</string>
    <string name="send_alert_continue">¿ Desea continuar ?</string>
    <string name="send">Enviar</string>
    <string name="video_target">Video para</string>
    <string name="delete_alert_tittle">Eliminar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="empty_pending">Aún no tienes solicitudes</string>
    <string name="empty_sketch">No tienes borradores guardados</string>
    <string name="empty_sent">No has enviado videos aún</string>
    <string name="empty_list_warning">No tienes más videos en "borrador". Esta solicitud de saludos se encuentra ahora en "pendientes".</string>
    <string name="message">Aviso</string>
    <string name="dialog_continue">Entendido</string>
    <string name="uploading_video">Subiendo video...</string>
    <string name="uploading_body">No cierres la app mientras se completa este proceso</string>
    <string name="uploading_bottom_text">Puedes usar tu celular de manera normal mientra se lleva acabo este proceso en segundo plano y te notificaremos cuando este completado.</string>

    <string name="placeholder_name">User name</string>
    <string name="placeholder_email">User email</string>
    <string name="placeholder_reason">Client reason</string>
    <string name="placeholder_client_name">Client name</string>

    <string name="menu_pending">Pendientes</string>
    <string name="menu_sketch">Borrador</string>
    <string name="menu_sent">Enviados</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent placerat,
        arcu vel elementum malesuada, purus sem porta eros,
        quis feugiat purus lorem at mauris. Aliquam dapibus varius lectus,
        et feugiat mi consectetur in. urus sem porta eros,
        quis feugiat purus lorem at mauris.  </string>

</resources>