<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_purple"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="136dp"
        android:layout_height="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_logo_fanfun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_tittle"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/LoginTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/email"
            android:maxLines="1"
            android:padding="0dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/LoginTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="0dp"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="@color/main_pink"
        android:fontFamily="@font/montserrat"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:lineSpacingExtra="0dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="72dp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_input_error"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/design_default_color_error"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/montserrat"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_weight="0.5"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_bottom_text"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_weight="0.5"
            android:id="@+id/login_funfun_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_bottom_link"
            android:textAlignment="textStart"
            android:textColor="@color/main_pink"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>