<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lighter_cardview_purple">

        <TextView
            android:id="@+id/dialog_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/message"
            android:textColor="@color/honey_yellow"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/empty_list_warning"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_tittle" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/empty_dialog_continue_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/dialog_continue"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dialog_text"
            app:layout_constraintTop_toBottomOf="@+id/dialog_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>