<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_purple">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingEnd="10dp"
        android:paddingStart="5dp"
        app:iconSize="20dp"
        app:icon="@drawable/ic_arrow_left"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_back_arrow" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="353dp"
        android:layout_height="255dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/lighter_cardview_purple"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@mipmap/profile_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="Nicolas Alfaro"
                android:textColor="@color/main_pink"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="nalfaro@jumpitt.com"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/materialButton"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/materialButton2"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/logout_button"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>