<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:backgroundTint="@color/lighter_cardview_purple"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pending_client_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_default_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pending_client_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_reason"
            android:fontFamily="@font/allerta"
            android:textColor="@color/honey_yellow"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending_client_picture" />

        <TextView
            android:id="@+id/pending_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder_client_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending_client_reason" />

        <TextView
            android:id="@+id/pending_client_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat"
            android:text="09/11/2020 - Te quedan 3 días"
            android:textSize="13sp"
            android:textColor="@color/light_purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pending_client_name" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/pending_comment_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_comment"
            app:layout_constraintEnd_toStartOf="@+id/pending_card_action_button"
            app:layout_constraintHorizontal_bias="0.837"
            app:layout_constraintStart_toEndOf="@+id/pending_client_picture"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/card_button"
            android:id="@+id/pending_card_action_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/main_pink"
            android:textAllCaps="false"
            android:text="@string/record_video"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic__record"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>